# weekend-api

./: .coveragerc  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: asgi.py
app/application/service/: auth_service.py  band.py  band_service.py  category_service.py  (+8 more)
app/common/: exception.py  http.py  permission.py  response.py  template.py  utils.py
app/core/: application.py  database.py  exception_handlers.py  openapi.py  settings.py
app/domain/: __init__.py  band.py  notice.py  post.py  schedule.py  song.py  user.py  user_band.py
app/models/: __init__.py  band.py  base.py  schedule.py  song.py  user.py
app/routes/: __init__.py  auth.py  band.py  document.py  home.py  schedule.py  song.py  user.py
app/schemas/: auth.py  band.py  base.py  schedule.py  song.py  user.py
app/service/: auth.py  band.py  schedule.py  song.py  user.py
app/templates/: base.html  document.html  index.html  pick.html  register.html
conf/: nginx.conf
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
static/css/: auth.css  base.css  button.css  calendar.css  document.css  form.css  home.css  pick.css  post.css  register.css  schedule.css  setting.css  song.css
static/js/: authLogin.js  authSignup.js  button.js  calendar.js  document.js  home.js  pick.js  post-detail.js  post.js  register.js  request.js  schedule-detail.js  song-detail.js  song.js  utils.js
tests/: __init__.py  conftest.py  test_auth.py  test_band.py  test_document.py  test_home.py  test_schedule.py  test_song.py  test_user.py
tests/service/: conftest.py  factory.py  test_auth_service.py  test_band_service.py  test_schedule_service.py  test_song_service.py  test_user_service.py
(+202 files in other folders)
